--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,14 @@
     ],
     "routes": [
       {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/templates/(.*)",
+        "dest": "/templates/$1"
+      },
+      {
         "src": "/",
         "dest": "run.py"
       },
